# sweat

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TESTING.md  agent.py  asana_client.py  audit.jsonl  audit.py  cli.py  config.py  conftest.py  dashboard.html  dashboard.py  docker-compose.yml  exceptions.py  github_client.py  main.py  pr_poller.py  pr_reviewer.py  pyproject.toml  requirements.txt  responsibilities_state.json  task_claims.py  task_filter.py  task_selector.py  telemetry.py
agents/: __init__.py  base.py  code_reviewer.py  helpers.py  implementer.py  registry.py  reviewer.py  security_reviewer.py
clients/: __init__.py  asana.py  github.py
dashboard/: __init__.py  dashboard.html  server.py  state.py
docs/: README.md  ROADMAP.md  known-issues.md  task-filtering.md
docs/plans/: 2026-03-10-digital-twin-agent-design.md  2026-03-10-digital-twin-agent.md
docs/superpowers/plans/: 2026-03-17-cli-wizard.md  2026-03-17-code-reviewer-task-formatting.md
docs/superpowers/specs/: 2026-03-17-cli-wizard-design.md  2026-03-17-code-reviewer-task-formatting-design.md
knowledge/: MEMORY.md
knowledge/patterns/: architecture.md  general.md  testing.md
knowledge/pitfalls/: common_mistakes.md  rejected_prs.md
knowledge/tasks/: by_type.md
prompts/: __init__.py  ci_fix_prompt.py  code_review_prompt.py  comment_response_prompt.py  review_prompt.py  review_response_prompt.py  security_review_prompt.py  task_prompt.py
responsibilities/: __init__.py  base.py  ci_responder.py  claims.py  comment_responder.py  registry.py  review_responder.py  snapshot.py  state.py
skills/: base.py  registry.py
skills/frontend_designer/: __init__.py  prompt.md
skills/security_reviewer/: __init__.py  prompt.md
sweat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sweat_agent.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_agent.py  test_agent_state.py  test_asana_client.py  test_async_wrappers.py  test_audit.py  test_ci_responder.py  test_code_reviewer.py  test_comment_responder.py  test_dashboard.py  test_github_client.py  test_helpers.py  test_implementer.py  test_main.py  test_pr_poller.py  test_pr_reviewer.py  test_responsibility_claims.py  test_responsibility_state.py  test_review_prompt.py  test_review_responder.py  test_reviewer.py  test_task_claims.py  test_task_filter.py  test_task_prompt.py  test_task_selector.py
