[project]
name = "sweat-agent"
version = "0.1.0"
description = "Autonomous software engineering agent — picks Asana tasks, writes code via Claude Code, opens GitHub PRs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "claude-agent-sdk>=0.0.14",
    "asana>=5.0.0",
    "PyGithub>=2.1.1",
    "GitPython>=3.1.41",
    "python-dotenv>=1.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/augusttollerup/sweat"
Source = "https://github.com/augusttollerup/sweat"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
sweat = "cli:main"

[tool.setuptools]
py-modules = [
    "cli", "config", "agent", "audit", "task_selector",
    "task_filter", "task_claims", "telemetry", "exceptions", "main",
]
packages = ["agents", "clients", "prompts", "knowledge"]

[tool.setuptools.package-data]
knowledge = ["**/*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
