[project]
name = "sweat-agent"
version = "0.1.5"
description = "Autonomous software engineering agent — picks Asana tasks, writes code via Claude Code, opens GitHub PRs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "claude-agent-sdk>=0.0.14",
    "asana>=5.0.0",
    "PyGithub>=2.1.1",
    "GitPython>=3.1.41",
    "python-dotenv>=1.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "typer>=0.12",
    "rich>=13.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.urls]
Homepage = "https://github.com/augusttollerup/sweat"
Source = "https://github.com/augusttollerup/sweat"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27",
]

[project.scripts]
sweat-agent = "cli:main"

[tool.hatch.build.targets.wheel]
packages = [
    "agents", "clients", "prompts", "knowledge", "responsibilities", "dashboard",
]
[tool.hatch.build.targets.wheel.force-include]
"cli.py" = "cli.py"
"config.py" = "config.py"
"agent.py" = "agent.py"
"audit.py" = "audit.py"
"task_selector.py" = "task_selector.py"
"task_filter.py" = "task_filter.py"
"task_claims.py" = "task_claims.py"
"telemetry.py" = "telemetry.py"
"exceptions.py" = "exceptions.py"
"main.py" = "main.py"
"dashboard/dashboard.html" = "dashboard/dashboard.html"

[tool.pytest.ini_options]
asyncio_mode = "auto"
